--- a/auth.cfg
+++ b/auth.cfg
@@ -2,3 +2,4 @@
 api_key_1 = xx-pteYiNnCxbQdxgnHiRqUT3BlbkFJ0MLZYqHIAZgiZbC1UioN
 api_key_2 = xy-pteYiNnCxbQdxgnHiRqUT3BlbkFJ0MLZYqHIAZgiZbC1UioN
 api_key_3 = xz-pteYiNnCxbQdxgnHiRqUT3BlbkFJ0MLZYqHIAZgiZbC1UioN
+api_key_4 = vip_friends_and_famliy_333
