--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -20,10 +20,10 @@ jobs:
 
       - name: Install Flask API dependencies
         run: |
-          cd flask_api
+          cd api_app
           pip install -r requirements.txt
 
       - name: Deploy Flask API
         run: |
-          cd flask_api
-          gunicorn your_api_file:app  # Adjust the filename and app instance
+          cd api_appi
+          gunicorn app.py:app  # Adjust the filename and app instance
