--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Deploy Flask API
         run: |
-          cd api_appi
+          cd api_app
           gunicorn app.py:app  # Adjust the filename and app instance
