--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -26,4 +26,4 @@ jobs:
       - name: Deploy Flask API
         run: |
           cd api_app
-          python app.py:app  # Adjust the filename and app instance
+          python app.py  # Adjust the filename and app instance
