--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -18,6 +18,11 @@ jobs:
         with:
           python-version: '3.10.4'  # Adjust the Python version
 
+      - name: Clear cached dependencies
+        run: |
+          pip cache purge
+
+
       - name: Install Flask API dependencies
         run: |
           cd api_app
